Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8024511

Crash during color profile destruction

XMLWordPrintable

    • 2d
    • 8
    • b108
    • generic
    • generic

        Starting fix for 7043064, we are using disposer to destroy a native part of the color profile.
        However an incorrect disposal method is registered in the disposer. It results in occasional
        crashed during profile destruction. Typically, the crash happens in cmsPipelineFree.
        An example of crash log is attached.

              bae Andrew Brygin
              bae Andrew Brygin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: