8024511: Crash during color profile destruction

Reviewed-by: vadim, prr